@@ -432,6 +432,11 @@ Mac
 ---
 
 
+New platforms
+-------------
+
+- FreeBSD 7 support is added.
+
 
 Tools/Demos
 -----------
